<resources>
    <string name="app_name">Just Java</string>
    <string name="name">Name</string>
    <string name="toppings">Toppings</string>
    <string name="whipped_cream">Whipped Cream</string>
    <string name="chocolate">Chocolate</string>
    <string name="quantity">Quantity</string>
    <string name="order">Order</string>
    <string name="reset">Reset</string>
    <string name="subject_email">Just Java Order for</string>
    <string name="validation_name">You must type your name</string>
    <string name="add_whipped_cream">Add Whipped Cream?</string>
    <string name="add_chocolate">Add Chocolate?</string>
    <string name="thank_you">Thank you!</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
</resources>
