<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="ra.com.br.justjava.MainActivity">

    <LinearLayout
        style="@style/LayoutMargin"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <EditText
            android:id="@+id/edit_text_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:hint="@string/name"
            android:inputType="textCapWords"
            android:maxLength="40" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:text="@string/toppings"
            android:textAllCaps="true"
            android:textAppearance="?android:textAppearanceSmall" />

        <CheckBox
            android:id="@+id/check_box_whipped_cream"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:paddingLeft="10dp"
            android:text="@string/whipped_cream"
            android:textSize="16sp" />

        <CheckBox
            android:id="@+id/check_box_chocolate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:paddingLeft="10dp"
            android:text="@string/chocolate"
            android:textSize="16sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:text="@string/quantity"
            android:textAllCaps="true"
            android:textAppearance="?android:textAppearanceSmall" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:onClick="decrement"
                android:text="-"
                android:textAppearance="?android:textAppearanceLarge" />

            <TextView
                android:id="@+id/text_view_quantity"
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:text="1"
                android:textAlignment="center"
                android:textColor="@android:color/black"
                android:textSize="16sp" />

            <Button
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:onClick="increment"
                android:text="+"
                android:textAppearance="?android:textAppearanceLarge" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:onClick="submitOrder"
                android:text="@string/order"
                android:textAllCaps="true"
                android:textAppearance="?android:textAppearanceSmall" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:onClick="resetOrder"
                android:text="@string/reset"
                android:textAllCaps="true"
                android:textAppearance="?android:textAppearanceSmall" />

        </LinearLayout>

    </LinearLayout>
</ScrollView>